--- a/android/build.gradle
+++ b/android/build.gradle
@@ -66,6 +66,7 @@ dependencies {
   // For > 0.71, this will be replaced by `com.facebook.react:react-android:$version` by react gradle plugin
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
+  implementation ("com.tink:link:2.0.0")
 }
 
 if (isNewArchitectureEnabled()) {
